fix(section layout): add z-index to CPF button just in case

--- a/src/layouts/section/styles.module.scss
+++ b/src/layouts/section/styles.module.scss
@@ -113,6 +113,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 900;
 
   @media (min-width: $theme-breakpoints-mobile) {
     position: initial;
